# 0xDEADC0DE

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  GETTING_STARTED.md  LICENSE  PROJECT_SETUP.md  README.md  TODO.md  compile_commands.json  vcpkg.json
.github/: copilot-instructions.md
.zed/: debug.json  settings.json  tasks.json
TODOs/: ANIMATIONS_TODO.md
assets/config/: game.json
assets/shaders/: color.vert  text.vert
assets/shaders_old/: color.frag  text.frag
cmake/: DeadCodeRPGConfig.cmake.in
docs/: ARCHITECTURE.md  CODING_STYLE.md  CONTRIBUTING.md  STORY.md  VERSION_MANAGEMENT.md
include/deadcode/audio/: AudioManager.hpp  MusicPlayer.hpp  SoundEffect.hpp
include/deadcode/core/: Application.hpp  Config.hpp  Logger.hpp  ResourceManager.hpp  Timer.hpp  Types.hpp  Version.hpp
include/deadcode/game/: GameLoop.hpp  GameState.hpp  SaveSystem.hpp
include/deadcode/graphics/: AnimationSystem.hpp  GlitchEffect.hpp  Renderer.hpp  Shader.hpp  TextRenderer.hpp  Window.hpp
include/deadcode/input/: InputManager.hpp  TextInput.hpp
include/deadcode/ui/: ConfigMenu.hpp  Menu.hpp  MenuFrame.hpp  StartMenu.hpp  TextBox.hpp  UiManager.hpp
scripts/: build.sh  clean.sh  format.sh  lint.sh  run.sh  setup-vscode.sh  setup-zed.sh  test.sh
src/: main.cpp
src/audio/: AudioManager.cpp  MusicPlayer.cpp  SoundEffect.cpp
src/core/: Application.cpp  Config.cpp  Logger.cpp  ResourceManager.cpp  Timer.cpp
src/game/: GameLoop.cpp  GameState.cpp  SaveSystem.cpp
src/game/combat/: Ability.cpp  CombatSystem.cpp  StatusEffect.cpp
src/game/dialogue/: DialogueNode.cpp  DialogueSystem.cpp  DialogueTree.cpp
src/game/entities/: Character.cpp  Enemy.cpp  Entity.cpp  NPC.cpp  Player.cpp
src/game/items/: Equipment.cpp  Inventory.cpp  Item.cpp
src/game/quest/: Objective.cpp  Quest.cpp  QuestManager.cpp
src/game/world/: Location.cpp  Room.cpp  World.cpp
src/graphics/: AnimationSystem.cpp  EffectManager.cpp  GlitchEffect.cpp  Renderer.cpp  Shader.cpp  TextRenderer.cpp  Window.cpp
src/input/: CommandParser.cpp  InputManager.cpp  TextInput.cpp
src/ui/: ConfigMenu.cpp  Console.cpp  Menu.cpp  MenuFrame.cpp  StartMenu.cpp  TextBox.cpp  UIManager.cpp
